<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.thesis.HouseProfileActivity">

    <item
        android:id="@+id/action_addhouse"
        android:icon="@mipmap/addicon"
        android:title="@string/switch_to_house"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_switch"
        android:icon="@mipmap/swap"
        android:title="@string/switch_to_house"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@mipmap/bookmark"
        android:title="@string/bookmark"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/action_profile_settings"
        android:orderInCategory="100"
        android:title="@string/my_profile_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_terms"
        android:orderInCategory="100"
        android:title="@string/terms_and_conditions_profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out_profile"
        app:showAsAction="never"
        />

</menu>