<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/php_apartmentpayment"
        android:layout_marginTop="25dp"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/number_edit_text_dormpayment"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="5"
        android:background="@drawable/rounded_white"
        android:paddingEnd="20dp"

        android:gravity="center"
        android:paddingStart="20dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_apartmentpayment"
        android:layout_marginTop="25dp"
        android:textSize="12sp"

        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"/>


    <Spinner
        android:id="@+id/type_spinner_dormpayment_per"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_weight="20"
        android:entries="@array/apartment_per_payment"
        android:gravity="center"
        android:prompt="@string/type_apartment_per"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_dorm"
        android:layout_marginTop="25dp"

        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"/>

    <Spinner
        android:id="@+id/type_spinner_dormpayment"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_weight="20"
        android:layout_marginTop="25dp"
        android:entries="@array/boarding_per_payment"
        android:prompt="@string/type_boarding_fora"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        />



    <Button
        android:id="@+id/delete_button_dormpayment"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"

        android:layout_weight="1"
        android:background="@drawable/delete"
        android:gravity="center"
        android:onClick="onDelete" />

</LinearLayout>