<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thesis.SettingsActivity">


    <Button
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:paddingEnd="40dp"
        android:paddingStart="10dp"
        android:text="@string/my_boarding_house_settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />



    <Button
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"

        android:layout_marginTop="62dp"

        android:text="@string/log_out_settings"
        android:textColor="@color/black"
        android:paddingEnd="250dp"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:id="@+id/button3" />


    <Button
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"

        android:layout_marginTop="124dp"

        android:text="@string/deactivate_account"
        android:textColor="@color/black"
        android:paddingEnd="120dp"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:id="@+id/button" />


    <Button

        android:layout_width="match_parent"
        android:layout_height="70dp"


        android:background="@color/gray"

        android:layout_gravity="center"
        android:layout_marginTop="186dp"


        android:paddingEnd="100dp"
        android:paddingStart="10dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />


</RelativeLayout>
